fix: fix spacing

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -44,7 +44,6 @@
     border: 8px solid #000000;
     line-height: 32px;
     box-sizing: border-box;
-    margin-bottom: 30px;
     position: relative;
 }
 
